fix image alignment

--- a/src/components/tables/fullyResponsiveTable/fullyResponsiveTable.css
+++ b/src/components/tables/fullyResponsiveTable/fullyResponsiveTable.css
@@ -56,6 +56,8 @@
 .fully-responsive-table img {
     width: 20px;
     height: 20px;
+    vertical-align: middle;
+    padding: 1px 0;
 }
 
 .fully-responsive-table img:hover {
